--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+geo-types = "0.7.2"
+num = "0.4.0"
+regex = "1.5.4"
+thiserror = "1.0.30"
+anyhow = "1.0.53"
