--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 geo-types = "0.7.2"
 num = "0.4.0"
 regex = "1.5.4"
 anyhow = "1.0.53"
+wasm-bindgen = "0.2.79"
