--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "national-grid",
   "license": "MIT",
   "version": "0.1.0",
-  "dependencies": {},
+  "scripts": {
+    "build": "rimraf pkg && webpack",
+    "start": "rimraf pkg && webpack-dev-server --open",
+    "test": "cargo test && wasm-pack test --headless"
+  },
   "devDependencies": {
-    "webpack": "^5.69.1"
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "rimraf": "^3.0.2",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
